discussion/kv_engine/150014/150014_rev2_discussion.txt
======================================================================================================================
DESCRIPTION:

MB-45144: Collection disk size use DocInfo::getTotalSize

For all items that contribute to disk size, use DocInfo::getTotalSize
which returns the key + value + meta sizes.

Change-Id: I0b8229252bcd2b2afb320261f5abdfd9fbb04027

======================================================================================================================
COMMENTS
======================================================================================================================
Author: Jim Walker
Date: 2021-03-31 08:38:58.000000000
Message: 
Uploaded patch set 2: Patch Set 1 was rebased.
----------------------------------------------------------------------------------------------------------------------
Author: Build Bot
Date: 2021-03-31 09:12:07.000000000
Message: 
Patch Set 2: Verified-1

Build Failed 

http://cv.jenkins.couchbase.com/job/kv_engine-clang_analyzer-master/29745/ : FAILURE

Compile error at /home/couchbase/jenkins/workspace/kv_engine-clang_analyzer-master/kv_engine/engines/ep/src/couch-kvstore/couch-kvstore.cc:45:10:
fatal error: "charconv" file not found
 ( http://cv.jenkins.couchbase.com/job/kv_engine-clang_analyzer-master/29745/ )

http://cv.jenkins.couchbase.com/job/kv_engine-windows-master/34665/ : FAILURE

Compile error at ..\kv_engine\engines\ep\src\couch-kvstore\couch-kvstore.cc(210): error C2665: "std::from_chars": none of the 14 overloads could convert all the argument types ( http://cv.jenkins.couchbase.com/job/kv_engine-windows-master/34665/ )

http://cv.jenkins.couchbase.com/job/kv_engine-clang_tidy/8019/ : FAILURE

clang-tidy found the following problems:

<pre>
/home/couchbase/jenkins/workspace/kv_engine-clang_tidy/kv_engine/engines/ep/src/couch-kvstore/couch-kvstore.cc:45:10: error: "charconv" file not found [clang-diagnostic-error]
#include <charconv>
         ^

</pre> ( http://cv.jenkins.couchbase.com/job/kv_engine-clang_tidy/8019/ )

Compile error at /home/couchbase/jenkins/workspace/kv_engine-clang_tidy/kv_engine/engines/ep/src/couch-kvstore/couch-kvstore.cc:45:10:
error: "charconv" file not found [clang-diagnostic-error]
 ( http://cv.jenkins.couchbase.com/job/kv_engine-clang_tidy/8019/ )

http://cv.jenkins.couchbase.com/job/kv_engine.linux-CE/job/master/9604/ : FAILURE

Compile error at [2021-03-31T08:52:06.957Z] ../kv_engine/engines/ep/src/couch-kvstore/couch-kvstore.cc:45:10:
fatal error: charconv: No such file or directory
 ( http://cv.jenkins.couchbase.com/job/kv_engine.linux-CE/job/master/9604/ )

http://cv.jenkins.couchbase.com/job/kv_engine.linux/job/master/9740/ : FAILURE

Compile error at [2021-03-31T09:03:15.940Z] ../kv_engine/engines/ep/src/couch-kvstore/couch-kvstore.cc:45:10:
fatal error: charconv: No such file or directory
 ( http://cv.jenkins.couchbase.com/job/kv_engine.linux/job/master/9740/ )

http://cv.jenkins.couchbase.com/job/kv_engine.threadsanitizer/job/master/9965/ : FAILURE

Compile error at [2021-03-31T09:00:50.439Z] ../kv_engine/engines/ep/src/couch-kvstore/couch-kvstore.cc:45:10:
fatal error: "charconv" file not found
 ( http://cv.jenkins.couchbase.com/job/kv_engine.threadsanitizer/job/master/9965/ )

http://cv.jenkins.couchbase.com/job/kv_engine.ASan-UBSan/job/master/17513/ : FAILURE

http://cv.jenkins.couchbase.com/job/kv_engine-clang_format_9/6563/ : SUCCESS

http://cv.jenkins.couchbase.com/job/kv_engine.macos/job/master/8669/ : SUCCESS
----------------------------------------------------------------------------------------------------------------------
